[tool.poetry]
name = "todd"
version = "0.1.0"
description = "Package Manager for ToddLinux."
readme = "README.md"
authors = ["Adam Jędrzejewski, Christopher Besch"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"todd" = "todd.__main__:main"
